--- a/UI/src/app/modules/validation-result/components/publishing/publishing.component.scss
+++ b/UI/src/app/modules/validation-result/components/publishing/publishing.component.scss
@@ -1,6 +1,17 @@
-section {
+.form-background{
   visibility: hidden;
   opacity: 0;
+  position: fixed;
+
+  height: 100%;
+  width: 100%;
+
+  //background: white;
+  padding: 64px;
+
+  border-radius: 8px;
+
+  box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.1);
 
   &.open {
     visibility: inherit;
@@ -9,44 +20,53 @@ section {
 
   display: block;
 
-  position: absolute;
-  top: 0;
-  left: 0;
   right: 0;
   bottom: 0;
 
   background: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms ease-in;
+  z-index: 1050;
+  overflow-y: hidden;
+}
+.publishing-form {
+  /* cover the modal */
+  //position: absolute;
+  //top: 0;
+  //left: 0;
+  //width: 100%;
+  //height: 100%;
+  //
+  ///* spacing as needed */
+  //padding: 20px 50px 20px 20px;
 
-  > div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  /* let it scroll */
+  overflow: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
-    height: 200px;
-    width: 300px;
+  height: 70%;
+  width: 55%;
 
-    background: white;
-    padding: 64px;
+  background: white;
+  padding: 64px;
 
-    border-radius: 8px;
+  border-radius: 8px;
 
-    box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.1);
-  }
+  box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.1);
+}
+button.close {
+  background: none;
+  color: black;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  outline: none;
 
-  button.close {
-    background: none;
-    color: inherit;
-    border: none;
-    font: inherit;
-    cursor: pointer;
-    outline: none;
+  position: absolute;
+  top: 0;
+  left: 0;
 
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    padding: 16px;
-  }
+  padding: 16px;
 }
