--- a/UI/src/app/modules/validation-result/components/publishing/publishing.component.scss
+++ b/UI/src/app/modules/validation-result/components/publishing/publishing.component.scss
@@ -29,16 +29,6 @@
   overflow-y: hidden;
 }
 .publishing-form {
-  /* cover the modal */
-  //position: absolute;
-  //top: 0;
-  //left: 0;
-  //width: 100%;
-  //height: 100%;
-  //
-  ///* spacing as needed */
-  //padding: 20px 50px 20px 20px;
-
   /* let it scroll */
   overflow: auto;
   position: absolute;
@@ -46,7 +36,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  height: 70%;
+  height: 75%;
   width: 55%;
 
   background: white;
@@ -69,4 +59,38 @@ button.close {
   left: 0;
 
   padding: 16px;
+}
+.label {
+  font-size: 1rem;
+  color: white;
+  line-height: 1rem;
+  min-height: 3rem;
+  padding: 1rem;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  background-color: #00AAE3;
+  display: flex;
+  align-items: center;
+}
+
+textarea{
+  min-height: 3rem;
+}
+.form-field{
+  border-radius: 0;
+}
+
+input {
+  width: 18%;
+  height: 3rem;
+}
+.help-field{
+  color: white;
+  background-color: #00AAE3;
+  min-height: 3rem;
+  border-radius: 0 5px 5px 0;
+  font-size: 1.1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
