--- a/UI/src/app/modules/validation-result/components/publishing/publishing.component.scss
+++ b/UI/src/app/modules/validation-result/components/publishing/publishing.component.scss
@@ -94,3 +94,17 @@ input {
   justify-content: center;
   align-items: center;
 }
+#cancel-button{
+  color: white;
+  background-color: #6c757d;
+  border-color: #6c757d;
+  font-size: 1rem;
+  margin: 0.25rem;
+}
+#submit-button{
+  color: white;
+  background-color: #4760E5;
+  border-color: #4760E5;
+  font-size: 1rem;
+  margin: 0.25rem;
+}
