--- a/UI/src/app/modules/validation-result/components/publishing/publishing.component.scss
+++ b/UI/src/app/modules/validation-result/components/publishing/publishing.component.scss
@@ -96,3 +96,14 @@ input {
   font-size: 1rem;
   margin: 0.25rem;
 }
+
+.alert{
+  background-color: #FF6C5C26;
+  color: #FF6C5C;
+  width: 100%;
+  height: 3rem;
+  border: #FF6C5C30 solid 1px;
+  border-radius: 3px;
+  padding: 0.5rem;
+  margin: 0.5rem;
+}
