blocking the result window when the modal one is opened added

--- a/UI/src/app/pages/validation-result/validation-result.component.html
+++ b/UI/src/app/pages/validation-result/validation-result.component.html
@@ -1,4 +1,4 @@
-<main>
+<main [ngClass]="{'non-scrollable': isPublishingWindowOpen}">
 <div class="p-grid">
   <div class="p-col-12">
     <div *ngIf="(validationModel.validationRun|async) as validationRun" class="p-d-flex p-jc-center">
