some styling to the name change on a single validation view added

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -6104,7 +6104,7 @@ a.btn-action.p-button:hover, a.btn-action-large.p-button:hover{
   color: #fff;
   background-color: #00AAE3;
   border-color: #00AAE3;
-  padding: 0;
+  padding: 0.6rem 0 0 0;
   margin-left: 0.5rem;
   width: 1.3rem;
 }
