--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -3,14 +3,21 @@
     <div>
       <p-carousel [value]="CarouselImages" [circular]="true" [autoplayInterval]="5000"
                   [numVisible]="1" [numScroll]="1">
-        <ng-template let-image pTemplate="item">
-          <img *ngIf="(image.plot|async) as plot"
-               alt="{{image.link}}"
-               [src]="getSanitizedPlot(plot.plot)"
-               class="carousel-img">
+        <ng-template let-image pTemplate="item" >
+          <!--            <img *ngIf="(image.plot|async) as plot"-->
+          <!--                 alt="{{image.link}}"-->
+          <!--                 [src]="getSanitizedPlot(plot.plot)"-->
+          <!--                 class="carousel-img">-->
+          <div *ngIf="(image.plot|async) as plot" style="height: 400px">
+            <div  [ngStyle]="{'background-image': getBackgroundUrl(plot.plot)}" style="height: 100%">
+<!--              {{getSanitizedPlot(plot.plot)}}-->
+            </div>
+          </div>
+
           <div class="image-attribution">
             <a href="{{ image.link }}">{{ image.description }}</a>
           </div>
+          <!--          </div>-->
         </ng-template>
       </p-carousel>
     </div>
@@ -23,48 +30,48 @@
             against in-situ and model reference data
           </h3>
         </div>
-      <div *ngIf="userLoggedIn else elseBlock">
-        <p>
-        <a pButton
-           label="See results"
-           routerLink="/published-validations"
-           class="btn-action-home"
-           role="button">
-        </a>
-        <span class="p-mx-3 carousel-desc  d-sm-inline">or</span>
-        <a pButton
-           label="Try it"
-           routerLink="/validate"
-           class="btn-action-home"
-           role="button">
-        </a>
-        </p>
+        <div *ngIf="userLoggedIn else elseBlock">
+          <p>
+            <a pButton
+               label="See results"
+               routerLink="/published-validations"
+               class="btn-action-home"
+               role="button">
+            </a>
+            <span class="p-mx-3 carousel-desc  d-sm-inline">or</span>
+            <a pButton
+               label="Try it"
+               routerLink="/validate"
+               class="btn-action-home"
+               role="button">
+            </a>
+          </p>
+        </div>
+        <ng-template #elseBlock>
+          <p>
+            <a pButton
+               label="See results"
+               routerLink="/published-validations"
+               class="btn-action-home"
+               role="button">
+            </a>
+            <span class="p-mx-3 carousel-desc  d-sm-inline">or</span>
+            <a pButton
+               label="Sign up"
+               routerLink="/signup"
+               class="btn-action-home"
+               role="button">
+            </a>
+            <span class="p-mx-3 carousel-desc d-sm-inline">or</span>
+            <a pButton
+               label="Log in"
+               routerLink="/login"
+               class="btn-action-home"
+               role="button">
+            </a>
+          </p>
+        </ng-template>
       </div>
-      <ng-template #elseBlock>
-        <p>
-        <a pButton
-           label="See results"
-           routerLink="/published-validations"
-           class="btn-action-home"
-           role="button">
-        </a>
-        <span class="p-mx-3 carousel-desc  d-sm-inline">or</span>
-        <a pButton
-           label="Sign up"
-           routerLink="/signup"
-           class="btn-action-home"
-           role="button">
-        </a>
-        <span class="p-mx-3 carousel-desc d-sm-inline">or</span>
-        <a pButton
-           label="Log in"
-           routerLink="/login"
-           class="btn-action-home"
-           role="button">
-        </a>
-        </p>
-      </ng-template>
-    </div>
     </div>
 
   </div>
@@ -72,44 +79,46 @@
   <hr class="featurette-divider">
 
   <div class="container-marketing p-grid">
-      <div class="p-md-5">
-        <div *ngIf="settings$|async as settings">
-          <div class="card news card-body">
-            <h5 class="card-title">News</h5>
-            <div [innerHTML]=settings[0].news></div>
-          </div>
-        </div>
-      </div>
-      <div class="p-md-7">
-        <div class="overflow">
-          <div *ngFor="let logo of logos">
-            <a *ngIf="(logo.plot|async) as plot" href="{{logo.link}}">
-              <img alt="{{logo.link}}" [src]="getSanitizedPlot(plot.plot)">
-            </a>
-          </div>
-        </div>
-        <h3 class="featurette-heading">Overview <span class="text-muted">QA4SM</span></h3>
-        The Quality Assurance for Soil Moisture (<b>QA4SM</b>) service provides the user with:
-        <ul class="list">
-          <li>An easy-to-use interface for comparing satellite soil moisture data against land surface models and the <a href="https://ismn.geo.tuwien.ac.at/">international soil moisture network</a></li>
-          <li>A traceble and consistent methodology for all comparisons</li>
-          <li>Various filtering and scaling options to assess the impact of these on the validation results</li>
-          <li>Traceable validation results in netCDF format and as visualisations (graphs and maps)</li>
-        </ul>
-        The overall aim is to <b>bring together methodologies and protocols</b> used for the validation and quality control of soil moisture data products and provider users with <b>traceable validation results</b>.
-        <p>QA4SM is supported by the <a href="https://www.ffg.at/en">Austrian Space Application Programme</a>.</p>
-
-        <div *ngFor="let workflow of ImgWorkflowDiagram">
-          <img *ngIf="(workflow.plot|async) as plot"
-            class="scaled_image"
-            [src]="getSanitizedPlot(plot.plot)"
-            (click)="showGallery(0, [plot])"
-            [alt]="workflow.description"
-            id="workflow"
-            style="max-width: 80%"/>
+    <div class="p-md-5">
+      <div *ngIf="settings$|async as settings">
+        <div class="card news card-body">
+          <h5 class="card-title">News</h5>
+          <div [innerHTML]=settings[0].news></div>
         </div>
       </div>
     </div>
+    <div class="p-md-7">
+      <div class="overflow">
+        <div *ngFor="let logo of logos">
+          <a *ngIf="(logo.plot|async) as plot" href="{{logo.link}}">
+            <img alt="{{logo.link}}" [src]="getSanitizedPlot(plot.plot)">
+          </a>
+        </div>
+      </div>
+      <h3 class="featurette-heading">Overview <span class="text-muted">QA4SM</span></h3>
+      The Quality Assurance for Soil Moisture (<b>QA4SM</b>) service provides the user with:
+      <ul class="list">
+        <li>An easy-to-use interface for comparing satellite soil moisture data against land surface models and the <a
+          href="https://ismn.geo.tuwien.ac.at/">international soil moisture network</a></li>
+        <li>A traceble and consistent methodology for all comparisons</li>
+        <li>Various filtering and scaling options to assess the impact of these on the validation results</li>
+        <li>Traceable validation results in netCDF format and as visualisations (graphs and maps)</li>
+      </ul>
+      The overall aim is to <b>bring together methodologies and protocols</b> used for the validation and quality
+      control of soil moisture data products and provider users with <b>traceable validation results</b>.
+      <p>QA4SM is supported by the <a href="https://www.ffg.at/en">Austrian Space Application Programme</a>.</p>
+
+      <div *ngFor="let workflow of ImgWorkflowDiagram">
+        <img *ngIf="(workflow.plot|async) as plot"
+             class="scaled_image"
+             [src]="getSanitizedPlot(plot.plot)"
+             (click)="showGallery(0, [plot])"
+             [alt]="workflow.description"
+             id="workflow"
+             style="max-width: 80%"/>
+      </div>
+    </div>
+  </div>
 
   <hr class="featurette-divider">
 
