--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -4,10 +4,16 @@
       <p-carousel [value]="carouselFiles" [circular]="true" [autoplayInterval]="5000"
                   [numVisible]="1" [numScroll]="1">
         <ng-template let-image pTemplate="item" >
-          <img *ngIf="image.plot as plot"
+          <img *ngIf="(image.plot|async) as plot"
                alt="{{image.link}}"
-               [src]="plot"
+               [src]="getSanitizedPlot(plot.plot)"
                class="carousel-img">
+<!--          <div *ngIf="(image.plot|async) as plot" style="height: 400px">-->
+<!--            <div  [ngStyle]="{'background-image': getBackgroundUrl(plot.plot)}" style="height: 100%">-->
+<!--&lt;!&ndash;              {{getSanitizedPlot(plot.plot)}}&ndash;&gt;-->
+<!--            </div>-->
+<!--          </div>-->
+
           <div class="image-attribution">
             <a href="{{ image.link }}">{{ image.description }}</a>
           </div>
