--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -1,13 +1,17 @@
 <main role="main">
   <div class="carousel">
     <div>
-      <p-carousel [value]="CarouselImages" [circular]="true" [autoplayInterval]="5000"
+      <p-carousel [value]="carouselFiles" [circular]="true" [autoplayInterval]="5000"
                   [numVisible]="1" [numScroll]="1">
         <ng-template let-image pTemplate="item" >
-          <img *ngIf="(image.plot|async) as plot"
-               alt="{{image.link}}"
-               [src]="getSanitizedPlot(plot.plot)"
+          <img alt="{{image.link}}"
+               [src]="image.plot"
                class="carousel-img">
+<!--        <ng-template let-image pTemplate="item" >-->
+<!--          <img *ngIf="(image.plot|async) as plot"-->
+<!--               alt="{{image.link}}"-->
+<!--               [src]="getSanitizedPlot(plot.plot)"-->
+<!--               class="carousel-img">-->
 <!--          <div *ngIf="(image.plot|async) as plot" style="height: 400px">-->
 <!--            <div  [ngStyle]="{'background-image': getBackgroundUrl(plot.plot)}" style="height: 100%">-->
 <!--&lt;!&ndash;              {{getSanitizedPlot(plot.plot)}}&ndash;&gt;-->
