unnecessary a tag removed

--- a/UI/src/app/pages/terms/terms.component.html
+++ b/UI/src/app/pages/terms/terms.component.html
@@ -85,8 +85,7 @@
     </li>
   </ol>
 
-  <a id="privacy_policy"></a>
-  <h1 class="h3 mb-3 font-weight-normal">Privacy Policy</h1>
+  <h1 id="privacy_policy" class="h3 mb-3 font-weight-normal">Privacy Policy</h1>
   <ol>
     <li>
       <b>Email:</b> On registration, users are asked to provide a valid email address where they can receive
