--- a/UI/src/app/modules/core/tools/scroll-to-top/scroll-to-top.component.html
+++ b/UI/src/app/modules/core/tools/scroll-to-top/scroll-to-top.component.html
@@ -1,5 +1,5 @@
 <div class="scroll-to-top" [ngClass]="{'show-scrollTop': windowScrolled}">
-  <button type="button" class="scroll-button" (click)="scrollToTop()">
+  <button aria-label="Scroll up" type="button" class="scroll-button" (click)="scrollToTop()">
     <i class="pi pi-chevron-up"></i>
   </button>
 </div>
