--- a/UI/src/app/pages/about/about.component.html
+++ b/UI/src/app/pages/about/about.component.html
@@ -1,6 +1,7 @@
 <main>
     <div id="introduction">
-        <a *ngIf="logoFfg$|async as logoFfg" href="https://www.ffg.at/en"><img id="logo_ffg" [src]="sanitizePlotUrl(logoFfg[0].plot)"></a>
+        <a *ngIf="logoFfg$|async as logoFfg" href="https://www.ffg.at/en">
+          <img alt="FFG logo" id="logo_ffg" [src]="sanitizePlotUrl(logoFfg[0].plot)"></a>
         The <b>QA4SM</b> project provides an operational online validation service for soil moisture products. It started
         in May 2018 and is supported by the <a href="https://www.ffg.at/en">Austrian Research Promotion Agency
         (Österreichische Forschungsförderungsgesellschaft, FFG)</a> in the
@@ -11,7 +12,8 @@
         <tbody>
             <tr>
                 <td class="align-middle">
-                    <a *ngIf="logoTuWien$|async as logoTuWien" href="https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/" target="_blank"><img class="partner_logo" [src]="sanitizePlotUrl(logoTuWien[0].plot)"></a>
+                    <a *ngIf="logoTuWien$|async as logoTuWien" href="https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/" target="_blank">
+                      <img alt="TUWien logo" class="partner_logo" [src]="sanitizePlotUrl(logoTuWien[0].plot)" style="width: 6.3rem"></a>
                 </td>
                 <td>
                     <b>TU Wien (Vienna University of Technology)</b><br>
@@ -24,7 +26,8 @@
             </tr>
             <tr>
                 <td class="align-middle">
-                    <a *ngIf="logoAwst$|async as logoAwst" href="https://www.awst.at/" target="_blank"><img class="partner_logo" [src]="sanitizePlotUrl(logoAwst[0].plot)"></a>
+                    <a *ngIf="logoAwst$|async as logoAwst" href="https://www.awst.at/" target="_blank">
+                      <img alt="AWST logo" class="partner_logo" [src]="sanitizePlotUrl(logoAwst[0].plot)" style="width: 5.1rem"></a>
                 </td>
                 <td>
                     <b>AWST (Applied Science, Software and Technology)</b><br>
@@ -35,7 +38,8 @@
             </tr>
             <tr>
                 <td class="align-middle">
-                    <a *ngIf="logoEodc$|async as logoEodc" href="https://www.eodc.eu/" target="_blank"><img class="partner_logo" [src]="sanitizePlotUrl(logoEodc[0].plot)"></a>
+                    <a *ngIf="logoEodc$|async as logoEodc" href="https://www.eodc.eu/" target="_blank">
+                      <img alt="EODC logo" class="partner_logo" [src]="sanitizePlotUrl(logoEodc[0].plot)" style="width: 4.5rem"></a>
                 </td>
                 <td>
                     <b>EODC (Earth Observation Data Centre)</b><br>
