--- a/UI/src/app/pages/about/about.component.html
+++ b/UI/src/app/pages/about/about.component.html
@@ -1,6 +1,6 @@
 <main>
     <div id="introduction">
-        <a *ngIf="logoFfg$|async as logoFfg" href="https://www.ffg.at/en">
+        <a *ngIf="logoFfg$|async as logoFfg" href="https://www.ffg.at/en" rel="noreferrer">
           <img alt="FFG logo" id="logo_ffg" [src]="sanitizePlotUrl(logoFfg[0].plot)"></a>
         The <b>QA4SM</b> project provides an operational online validation service for soil moisture products. It started
         in May 2018 and is supported by the <a href="https://www.ffg.at/en">Austrian Research Promotion Agency
@@ -12,7 +12,10 @@
         <tbody>
             <tr>
                 <td class="align-middle">
-                    <a *ngIf="logoTuWien$|async as logoTuWien" href="https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/" target="_blank">
+                    <a *ngIf="logoTuWien$|async as logoTuWien"
+                       href="https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/"
+                       target="_blank"
+                       rel="noreferrer">
                       <img alt="TUWien logo" class="partner_logo" [src]="sanitizePlotUrl(logoTuWien[0].plot)" style="width: 6.3rem"></a>
                 </td>
                 <td>
@@ -26,7 +29,7 @@
             </tr>
             <tr>
                 <td class="align-middle">
-                    <a *ngIf="logoAwst$|async as logoAwst" href="https://www.awst.at/" target="_blank">
+                    <a *ngIf="logoAwst$|async as logoAwst" href="https://www.awst.at/" target="_blank" rel="noreferrer">
                       <img alt="AWST logo" class="partner_logo" [src]="sanitizePlotUrl(logoAwst[0].plot)" style="width: 5.1rem"></a>
                 </td>
                 <td>
@@ -38,7 +41,7 @@
             </tr>
             <tr>
                 <td class="align-middle">
-                    <a *ngIf="logoEodc$|async as logoEodc" href="https://www.eodc.eu/" target="_blank">
+                    <a *ngIf="logoEodc$|async as logoEodc" href="https://www.eodc.eu/" target="_blank" rel="noreferrer">
                       <img alt="EODC logo" class="partner_logo" [src]="sanitizePlotUrl(logoEodc[0].plot)" style="width: 4.5rem"></a>
                 </td>
                 <td>
@@ -54,8 +57,8 @@
     <hr class="featurette-divider">
 
     <p id="footer">
-        QA4SM is open source software, licensed under an MIT license. <a href="https://github.com/awst-austria/qa4sm" target="_blank">It is available on GitHub.</a>
-        This site uses <a class="font-weight-bold" href="https://github.com/awst-austria/qa4sm/releases/tag/v{{this.getAppVersion()}}" target="_blank">version {{this.getAppVersion()}}</a>.
+        QA4SM is open source software, licensed under an MIT license. <a href="https://github.com/awst-austria/qa4sm" target="_blank" rel="noreferrer">It is available on GitHub.</a>
+        This site uses <a class="font-weight-bold" href="https://github.com/awst-austria/qa4sm/releases/tag/v{{this.getAppVersion()}}" target="_blank" rel="noreferrer">version {{this.getAppVersion()}}</a>.
     </p>
 <qa-scroll-to-top></qa-scroll-to-top>
 </main>
