--- a/UI/src/app/pages/dataset-info/dataset-info.component.html
+++ b/UI/src/app/pages/dataset-info/dataset-info.component.html
@@ -1,7 +1,7 @@
 <main *ngIf="datasetInfo$ | async as datasets">
   <div *ngFor="let refFlag of [false, true]">
 
-    <div *ngIf="refFlag; else elseRefFlag">
+    <div *ngIf="!refFlag; else elseRefFlag">
       <h1 class="h3 mb-3 font-weight-normal">Datasets - Data to be validated and to be used as a reference</h1>
       <p>
         The following datasets can be validated within the QA4SM tool. These datasets are available in both the "data"
