unnecessary link removed

--- a/UI/src/app/pages/dataset-info/dataset-info.component.html
+++ b/UI/src/app/pages/dataset-info/dataset-info.component.html
@@ -10,8 +10,7 @@
     </div>
 
     <ng-template #elseRefFlag>
-      <a id="ref"></a>
-      <h1 class="h3 mb-3 font-weight-normal">Datasets - Reference Data</h1>
+      <h1 id="ref" class="h3 mb-3 font-weight-normal">Datasets - Reference Data</h1>
       <p>
         The following datasets can be used only as a reference within the QA4SM tool. These datasets are available in
         the
