rel attribute added

--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
@@ -11,9 +11,9 @@
 <div *ngIf="published" class="container p-text-center p-mb-5 p-mt-4" style="max-width: 40rem;">
   <h1>Published validations</h1>
   <p class="lead text-muted">
-    The QA4SM validations below have been published by their owners to <a target="_blank" href="https://zenodo.org/">Zenodo</a>
+    The QA4SM validations below have been published by their owners to <a target="_blank" href="https://zenodo.org/" rel="noreferrer">Zenodo</a>
     and
-    can be referenced with a <a target="_blank" href="https://www.doi.org/">DOI</a>.
+    can be referenced with a <a target="_blank" href="https://www.doi.org/" rel="noreferrer">DOI</a>.
   </p>
 </div>
 <!-- Sorting -->
