aria-label added to a button

--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -45,7 +45,7 @@
   </span>
 
   <div *ngIf="!published && !tracked" class="dropdown">
-    <button class="dropdownbutton">
+    <button class="dropdownbutton" aria-label="collapse">
       <span class="pi pi-angle-double-right"></span>
     </button>
     <div class="dropdown-content" style="text-align: left">
